--- a/css/main.css
+++ b/css/main.css
@@ -191,31 +191,26 @@ textarea {
 }
 
 #mainlogo {
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80%;
-}
+  width:80%;
+ }
 
 .screenbox {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
 
 .innerbox {
-  display: inline-block;
-  position: relative;
   width: 40em;
   max-width: 75%;
   background-color:#FFFFFF55;
-  left: 50%;
-  top: 5em;
-  transform: translate(-50%,0);
-  padding: 2em 2em 2em 2em;
-  font-size: 135%;
+  font-size: 115%;
+}
+
+.innerinnerbox {
+  margin: 2em 2em;
 }
 
 .moneyquote {
