--- a/web/css/main.css
+++ b/web/css/main.css
@@ -191,7 +191,15 @@ textarea {
 }
 
  #mainlogo {
+  position: absolute;
   width:80%;
+  height: 80%;
+ }
+
+ #shadow {
+  position: absolute;
+  width:80%;
+  height: 80%;
  }
 
 .screenbox {
@@ -203,7 +211,7 @@ textarea {
 }
 
 .innerbox {
-  width: 40em;
+  width: 42em;
   max-width: 75%;
   background-color:#FFFFFF55;
   font-size: 115%;
@@ -221,6 +229,32 @@ textarea {
 
 .innerbox h1 {
   font-family: 'Merriweather', serif;
+}
+
+#identity {
+  position: absolute;
+  bottom: 5%;
+  font-family: 'Merriweather', serif;
+  font-size: 1.6em;
+  font-style: italic;
+}
+
+
+#arrow {
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  font-family: 'Merriweather', serif;
+  font-size: 1.6em;
+}
+
+
+#arrow a {
+  text-decoration: none;
+}
+
+#arrow a:visited {
+  color: black;
 }
 
 /* ==========================================================================
