Very minor fixes.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -213,7 +213,7 @@ textarea {
 .innerbox {
   width: 42em;
   max-width: 75%;
-  background-color:#FFFFFF55;
+  background-color: #D2E8FF;
   font-size: 115%;
   margin-bottom: 4em;
 }
