--- a/web/css/main.css
+++ b/web/css/main.css
@@ -200,6 +200,13 @@ textarea {
 
  #previewlogo {
   width:30em;
+  max-width: 100%;
+ }
+
+ #navilogo {
+  width: 15em;
+  margin: -20px;
+  display: inline-block;
  }
 
  #shadow {
@@ -250,6 +257,46 @@ textarea {
 .innerbox blockquote {
   font-family: 'Merriweather', serif;
   font-style: italic;
+}
+
+@media only screen and (min-width: 1050px) {
+  label {
+    display: inline-block;
+    width: 40%;
+    text-align: right;
+    margin-right: 1em;
+  }
+  
+  input {
+    display: inline-block;
+  }
+}
+  
+@media only screen and (max-width: 700px) {
+  h1 {
+    font-size: 1.2em;
+  }
+
+  .innerbox {
+    max-width: 100%;
+  }
+
+  label {
+  display: block;
+    margin-top: 1em;
+  }
+  
+  input {
+    max-width: 100%;
+  }
+}
+
+button {
+  display: block;
+  margin-top: 2em;
+  margin-left: auto;
+  padding: 1em;
+  font-weight: bold;
 }
 
 .moneyquote {
