--- a/web/css/main.css
+++ b/web/css/main.css
@@ -210,7 +210,13 @@ textarea {
   padding: 20px 20px;
   border-right: 1px solid #f4f4f4;
   text-decoration: none;
+  color: black;
 }
+
+.header li a.active {
+  font-weight: 600;
+}
+
 .header li a:hover {
   background-color: #f4f4f4;
 }
