--- a/web/css/main.css
+++ b/web/css/main.css
@@ -228,7 +228,7 @@ textarea {
 }
 .header .menu {
   clear: both;
-  height: 0;
+  max-height: 0;
   transition: max-height .2s ease-out;
 }
 
@@ -269,7 +269,7 @@ textarea {
   display: none;
 }
 .header .menu-btn:checked ~ .menu {
-  height: auto;
+  max-height: 260px;
 }
 .header .menu-btn:checked ~ .menu-icon .navicon {
   background: transparent;
