More info for printing on fabric / textile

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -190,6 +190,12 @@ textarea {
   clear: both;
 }
 
+b,
+strong {
+  font-weight: 600;
+}
+
+
 .header {
   background-color: #fff;
   box-shadow: 1px 1px 12px 0 rgba(0,0,0,.6);
